Changelog
=========

1.1 - unreleased
----------------


1.0 - 2011-07-29
----------------

- Split off from `experimental.catalogqueryplan`.
  [hannosch]