@@ -1,4 +1,4 @@
-/* Generated by Cython 0.14.1 on Fri Jul 29 20:23:56 2011 */
+/* Generated by Cython 0.14.1 on Sat Aug 20 23:33:44 2011 */
 
 #define PY_SSIZE_T_CLEAN
 #include "Python.h"
@@ -646,37 +646,31 @@ static  PyObject *__pyx_f_12experimental_5btree_12intersection_ciiintersection(P
   /* "experimental/btree/intersection.pyx":20
  *     cdef object small, big, new, ins, has
  * 
- *     s1 = isinstance(o1, IISet)             # <<<<<<<<<<<<<<
- *     s2 = isinstance(o2, IISet)
+ *     s1 = type(o1) is IISet             # <<<<<<<<<<<<<<
+ *     s2 = type(o2) is IISet
  * 
  */
-  __pyx_t_6 = __pyx_v_o1;
-  __Pyx_INCREF(__pyx_t_6);
-  __pyx_t_5 = __Pyx_GetName(__pyx_m, __pyx_n_s__IISet); if (unlikely(!__pyx_t_5)) {__pyx_filename = __pyx_f[0]; __pyx_lineno = 20; __pyx_clineno = __LINE__; goto __pyx_L1_error;}
-  __Pyx_GOTREF(__pyx_t_5);
-  __pyx_t_1 = PyObject_IsInstance(__pyx_t_6, __pyx_t_5); if (unlikely(__pyx_t_1 == -1)) {__pyx_filename = __pyx_f[0]; __pyx_lineno = 20; __pyx_clineno = __LINE__; goto __pyx_L1_error;}
+  __pyx_t_6 = __Pyx_GetName(__pyx_m, __pyx_n_s__IISet); if (unlikely(!__pyx_t_6)) {__pyx_filename = __pyx_f[0]; __pyx_lineno = 20; __pyx_clineno = __LINE__; goto __pyx_L1_error;}
+  __Pyx_GOTREF(__pyx_t_6);
+  __pyx_t_1 = (((PyObject *)Py_TYPE(__pyx_v_o1)) == __pyx_t_6);
   __Pyx_DECREF(__pyx_t_6); __pyx_t_6 = 0;
-  __Pyx_DECREF(__pyx_t_5); __pyx_t_5 = 0;
-  __pyx_t_5 = __Pyx_PyBool_FromLong(__pyx_t_1); if (unlikely(!__pyx_t_5)) {__pyx_filename = __pyx_f[0]; __pyx_lineno = 20; __pyx_clineno = __LINE__; goto __pyx_L1_error;}
-  __Pyx_GOTREF(__pyx_t_5);
-  if (!(likely(__Pyx_TypeTest(__pyx_t_5, __pyx_ptype_7cpython_4bool_bool)))) {__pyx_filename = __pyx_f[0]; __pyx_lineno = 20; __pyx_clineno = __LINE__; goto __pyx_L1_error;}
+  __pyx_t_6 = __Pyx_PyBool_FromLong(__pyx_t_1); if (unlikely(!__pyx_t_6)) {__pyx_filename = __pyx_f[0]; __pyx_lineno = 20; __pyx_clineno = __LINE__; goto __pyx_L1_error;}
+  __Pyx_GOTREF(__pyx_t_6);
+  if (!(likely(__Pyx_TypeTest(__pyx_t_6, __pyx_ptype_7cpython_4bool_bool)))) {__pyx_filename = __pyx_f[0]; __pyx_lineno = 20; __pyx_clineno = __LINE__; goto __pyx_L1_error;}
   __Pyx_DECREF(((PyObject *)__pyx_v_s1));
-  __pyx_v_s1 = ((PyBoolObject *)__pyx_t_5);
-  __pyx_t_5 = 0;
+  __pyx_v_s1 = ((PyBoolObject *)__pyx_t_6);
+  __pyx_t_6 = 0;
 
   /* "experimental/btree/intersection.pyx":21
  * 
- *     s1 = isinstance(o1, IISet)
- *     s2 = isinstance(o2, IISet)             # <<<<<<<<<<<<<<
+ *     s1 = type(o1) is IISet
+ *     s2 = type(o2) is IISet             # <<<<<<<<<<<<<<
  * 
- *     if s1 or s2:
+ *     if s1 and s2:
  */
-  __pyx_t_5 = __pyx_v_o2;
-  __Pyx_INCREF(__pyx_t_5);
   __pyx_t_6 = __Pyx_GetName(__pyx_m, __pyx_n_s__IISet); if (unlikely(!__pyx_t_6)) {__pyx_filename = __pyx_f[0]; __pyx_lineno = 21; __pyx_clineno = __LINE__; goto __pyx_L1_error;}
   __Pyx_GOTREF(__pyx_t_6);
-  __pyx_t_1 = PyObject_IsInstance(__pyx_t_5, __pyx_t_6); if (unlikely(__pyx_t_1 == -1)) {__pyx_filename = __pyx_f[0]; __pyx_lineno = 21; __pyx_clineno = __LINE__; goto __pyx_L1_error;}
-  __Pyx_DECREF(__pyx_t_5); __pyx_t_5 = 0;
+  __pyx_t_1 = (((PyObject *)Py_TYPE(__pyx_v_o2)) == __pyx_t_6);
   __Pyx_DECREF(__pyx_t_6); __pyx_t_6 = 0;
   __pyx_t_6 = __Pyx_PyBool_FromLong(__pyx_t_1); if (unlikely(!__pyx_t_6)) {__pyx_filename = __pyx_f[0]; __pyx_lineno = 21; __pyx_clineno = __LINE__; goto __pyx_L1_error;}
   __Pyx_GOTREF(__pyx_t_6);
@@ -686,14 +680,14 @@ static  PyObject *__pyx_f_12experimental_5btree_12intersection_ciiintersection(P
   __pyx_t_6 = 0;
 
   /* "experimental/btree/intersection.pyx":23
- *     s2 = isinstance(o2, IISet)
+ *     s2 = type(o2) is IISet
  * 
- *     if s1 or s2:             # <<<<<<<<<<<<<<
- *         # Only do this if one of them is a set, we are slower at treesets.
- *         # We don't check the size of the treeset, so we sometimes loop over
+ *     if s1 and s2:             # <<<<<<<<<<<<<<
+ *         return iiintersection(o1, o2)
+ *     if s1 or s2:
  */
   __pyx_t_1 = __Pyx_PyObject_IsTrue(((PyObject *)__pyx_v_s1)); if (unlikely(__pyx_t_1 < 0)) {__pyx_filename = __pyx_f[0]; __pyx_lineno = 23; __pyx_clineno = __LINE__; goto __pyx_L1_error;}
-  if (!__pyx_t_1) {
+  if (__pyx_t_1) {
     __pyx_t_2 = __Pyx_PyObject_IsTrue(((PyObject *)__pyx_v_s2)); if (unlikely(__pyx_t_2 < 0)) {__pyx_filename = __pyx_f[0]; __pyx_lineno = 23; __pyx_clineno = __LINE__; goto __pyx_L1_error;}
     __pyx_t_3 = __pyx_t_2;
   } else {
@@ -701,63 +695,64 @@ static  PyObject *__pyx_f_12experimental_5btree_12intersection_ciiintersection(P
   }
   if (__pyx_t_3) {
 
-    /* "experimental/btree/intersection.pyx":28
+    /* "experimental/btree/intersection.pyx":24
+ * 
+ *     if s1 and s2:
+ *         return iiintersection(o1, o2)             # <<<<<<<<<<<<<<
+ *     if s1 or s2:
+ *         # Only do this if one of them is a set, we are slower at treesets.
+ */
+    __Pyx_XDECREF(__pyx_r);
+    __pyx_t_6 = __Pyx_GetName(__pyx_m, __pyx_n_s__iiintersection); if (unlikely(!__pyx_t_6)) {__pyx_filename = __pyx_f[0]; __pyx_lineno = 24; __pyx_clineno = __LINE__; goto __pyx_L1_error;}
+    __Pyx_GOTREF(__pyx_t_6);
+    __pyx_t_5 = PyTuple_New(2); if (unlikely(!__pyx_t_5)) {__pyx_filename = __pyx_f[0]; __pyx_lineno = 24; __pyx_clineno = __LINE__; goto __pyx_L1_error;}
+    __Pyx_GOTREF(((PyObject *)__pyx_t_5));
+    __Pyx_INCREF(__pyx_v_o1);
+    PyTuple_SET_ITEM(__pyx_t_5, 0, __pyx_v_o1);
+    __Pyx_GIVEREF(__pyx_v_o1);
+    __Pyx_INCREF(__pyx_v_o2);
+    PyTuple_SET_ITEM(__pyx_t_5, 1, __pyx_v_o2);
+    __Pyx_GIVEREF(__pyx_v_o2);
+    __pyx_t_4 = PyObject_Call(__pyx_t_6, ((PyObject *)__pyx_t_5), NULL); if (unlikely(!__pyx_t_4)) {__pyx_filename = __pyx_f[0]; __pyx_lineno = 24; __pyx_clineno = __LINE__; goto __pyx_L1_error;}
+    __Pyx_GOTREF(__pyx_t_4);
+    __Pyx_DECREF(__pyx_t_6); __pyx_t_6 = 0;
+    __Pyx_DECREF(((PyObject *)__pyx_t_5)); __pyx_t_5 = 0;
+    __pyx_r = __pyx_t_4;
+    __pyx_t_4 = 0;
+    goto __pyx_L0;
+    goto __pyx_L6;
+  }
+  __pyx_L6:;
+
+  /* "experimental/btree/intersection.pyx":25
+ *     if s1 and s2:
+ *         return iiintersection(o1, o2)
+ *     if s1 or s2:             # <<<<<<<<<<<<<<
+ *         # Only do this if one of them is a set, we are slower at treesets.
+ *         # We don't check the size of the treeset, so we sometimes loop over
+ */
+  __pyx_t_3 = __Pyx_PyObject_IsTrue(((PyObject *)__pyx_v_s1)); if (unlikely(__pyx_t_3 < 0)) {__pyx_filename = __pyx_f[0]; __pyx_lineno = 25; __pyx_clineno = __LINE__; goto __pyx_L1_error;}
+  if (!__pyx_t_3) {
+    __pyx_t_1 = __Pyx_PyObject_IsTrue(((PyObject *)__pyx_v_s2)); if (unlikely(__pyx_t_1 < 0)) {__pyx_filename = __pyx_f[0]; __pyx_lineno = 25; __pyx_clineno = __LINE__; goto __pyx_L1_error;}
+    __pyx_t_2 = __pyx_t_1;
+  } else {
+    __pyx_t_2 = __pyx_t_3;
+  }
+  if (__pyx_t_2) {
+
+    /* "experimental/btree/intersection.pyx":30
  *         # a very small one, but there's no way to tell, without loading it.
  * 
  *         if s1 and len(o1) < SMALLSETSIZE:             # <<<<<<<<<<<<<<
  *             small = o1
  *             big = o2
  */
-    __pyx_t_3 = __Pyx_PyObject_IsTrue(((PyObject *)__pyx_v_s1)); if (unlikely(__pyx_t_3 < 0)) {__pyx_filename = __pyx_f[0]; __pyx_lineno = 28; __pyx_clineno = __LINE__; goto __pyx_L1_error;}
-    if (__pyx_t_3) {
-      __pyx_t_6 = __pyx_v_o1;
-      __Pyx_INCREF(__pyx_t_6);
-      __pyx_t_7 = PyObject_Length(__pyx_t_6); if (unlikely(__pyx_t_7 == -1)) {__pyx_filename = __pyx_f[0]; __pyx_lineno = 28; __pyx_clineno = __LINE__; goto __pyx_L1_error;}
-      __Pyx_DECREF(__pyx_t_6); __pyx_t_6 = 0;
-      __pyx_t_1 = (__pyx_t_7 < 1000);
-      __pyx_t_2 = __pyx_t_1;
-    } else {
-      __pyx_t_2 = __pyx_t_3;
-    }
+    __pyx_t_2 = __Pyx_PyObject_IsTrue(((PyObject *)__pyx_v_s1)); if (unlikely(__pyx_t_2 < 0)) {__pyx_filename = __pyx_f[0]; __pyx_lineno = 30; __pyx_clineno = __LINE__; goto __pyx_L1_error;}
     if (__pyx_t_2) {
-
-      /* "experimental/btree/intersection.pyx":29
- * 
- *         if s1 and len(o1) < SMALLSETSIZE:
- *             small = o1             # <<<<<<<<<<<<<<
- *             big = o2
- *         elif s2 and len(o2) < SMALLSETSIZE:
- */
-      __Pyx_INCREF(__pyx_v_o1);
-      __Pyx_DECREF(__pyx_v_small);
-      __pyx_v_small = __pyx_v_o1;
-
-      /* "experimental/btree/intersection.pyx":30
- *         if s1 and len(o1) < SMALLSETSIZE:
- *             small = o1
- *             big = o2             # <<<<<<<<<<<<<<
- *         elif s2 and len(o2) < SMALLSETSIZE:
- *             small = o1
- */
-      __Pyx_INCREF(__pyx_v_o2);
-      __Pyx_DECREF(__pyx_v_big);
-      __pyx_v_big = __pyx_v_o2;
-      goto __pyx_L7;
-    }
-
-    /* "experimental/btree/intersection.pyx":31
- *             small = o1
- *             big = o2
- *         elif s2 and len(o2) < SMALLSETSIZE:             # <<<<<<<<<<<<<<
- *             small = o1
- *             big = o2
- */
-    __pyx_t_2 = __Pyx_PyObject_IsTrue(((PyObject *)__pyx_v_s2)); if (unlikely(__pyx_t_2 < 0)) {__pyx_filename = __pyx_f[0]; __pyx_lineno = 31; __pyx_clineno = __LINE__; goto __pyx_L1_error;}
-    if (__pyx_t_2) {
-      __pyx_t_6 = __pyx_v_o2;
-      __Pyx_INCREF(__pyx_t_6);
-      __pyx_t_7 = PyObject_Length(__pyx_t_6); if (unlikely(__pyx_t_7 == -1)) {__pyx_filename = __pyx_f[0]; __pyx_lineno = 31; __pyx_clineno = __LINE__; goto __pyx_L1_error;}
-      __Pyx_DECREF(__pyx_t_6); __pyx_t_6 = 0;
+      __pyx_t_4 = __pyx_v_o1;
+      __Pyx_INCREF(__pyx_t_4);
+      __pyx_t_7 = PyObject_Length(__pyx_t_4); if (unlikely(__pyx_t_7 == -1)) {__pyx_filename = __pyx_f[0]; __pyx_lineno = 30; __pyx_clineno = __LINE__; goto __pyx_L1_error;}
+      __Pyx_DECREF(__pyx_t_4); __pyx_t_4 = 0;
       __pyx_t_3 = (__pyx_t_7 < 1000);
       __pyx_t_1 = __pyx_t_3;
     } else {
@@ -765,7 +760,51 @@ static  PyObject *__pyx_f_12experimental_5btree_12intersection_ciiintersection(P
     }
     if (__pyx_t_1) {
 
+      /* "experimental/btree/intersection.pyx":31
+ * 
+ *         if s1 and len(o1) < SMALLSETSIZE:
+ *             small = o1             # <<<<<<<<<<<<<<
+ *             big = o2
+ *         elif s2 and len(o2) < SMALLSETSIZE:
+ */
+      __Pyx_INCREF(__pyx_v_o1);
+      __Pyx_DECREF(__pyx_v_small);
+      __pyx_v_small = __pyx_v_o1;
+
       /* "experimental/btree/intersection.pyx":32
+ *         if s1 and len(o1) < SMALLSETSIZE:
+ *             small = o1
+ *             big = o2             # <<<<<<<<<<<<<<
+ *         elif s2 and len(o2) < SMALLSETSIZE:
+ *             small = o1
+ */
+      __Pyx_INCREF(__pyx_v_o2);
+      __Pyx_DECREF(__pyx_v_big);
+      __pyx_v_big = __pyx_v_o2;
+      goto __pyx_L8;
+    }
+
+    /* "experimental/btree/intersection.pyx":33
+ *             small = o1
+ *             big = o2
+ *         elif s2 and len(o2) < SMALLSETSIZE:             # <<<<<<<<<<<<<<
+ *             small = o1
+ *             big = o2
+ */
+    __pyx_t_1 = __Pyx_PyObject_IsTrue(((PyObject *)__pyx_v_s2)); if (unlikely(__pyx_t_1 < 0)) {__pyx_filename = __pyx_f[0]; __pyx_lineno = 33; __pyx_clineno = __LINE__; goto __pyx_L1_error;}
+    if (__pyx_t_1) {
+      __pyx_t_4 = __pyx_v_o2;
+      __Pyx_INCREF(__pyx_t_4);
+      __pyx_t_7 = PyObject_Length(__pyx_t_4); if (unlikely(__pyx_t_7 == -1)) {__pyx_filename = __pyx_f[0]; __pyx_lineno = 33; __pyx_clineno = __LINE__; goto __pyx_L1_error;}
+      __Pyx_DECREF(__pyx_t_4); __pyx_t_4 = 0;
+      __pyx_t_2 = (__pyx_t_7 < 1000);
+      __pyx_t_3 = __pyx_t_2;
+    } else {
+      __pyx_t_3 = __pyx_t_1;
+    }
+    if (__pyx_t_3) {
+
+      /* "experimental/btree/intersection.pyx":34
  *             big = o2
  *         elif s2 and len(o2) < SMALLSETSIZE:
  *             small = o1             # <<<<<<<<<<<<<<
@@ -776,7 +815,7 @@ static  PyObject *__pyx_f_12experimental_5btree_12intersection_ciiintersection(P
       __Pyx_DECREF(__pyx_v_small);
       __pyx_v_small = __pyx_v_o1;
 
-      /* "experimental/btree/intersection.pyx":33
+      /* "experimental/btree/intersection.pyx":35
  *         elif s2 and len(o2) < SMALLSETSIZE:
  *             small = o1
  *             big = o2             # <<<<<<<<<<<<<<
@@ -786,11 +825,11 @@ static  PyObject *__pyx_f_12experimental_5btree_12intersection_ciiintersection(P
       __Pyx_INCREF(__pyx_v_o2);
       __Pyx_DECREF(__pyx_v_big);
       __pyx_v_big = __pyx_v_o2;
-      goto __pyx_L7;
+      goto __pyx_L8;
     }
     /*else*/ {
 
-      /* "experimental/btree/intersection.pyx":35
+      /* "experimental/btree/intersection.pyx":37
  *             big = o2
  *         else:
  *             return iiintersection(o1, o2)             # <<<<<<<<<<<<<<
@@ -798,9 +837,9 @@ static  PyObject *__pyx_f_12experimental_5btree_12intersection_ciiintersection(P
  *         new = IISet()
  */
       __Pyx_XDECREF(__pyx_r);
-      __pyx_t_6 = __Pyx_GetName(__pyx_m, __pyx_n_s__iiintersection); if (unlikely(!__pyx_t_6)) {__pyx_filename = __pyx_f[0]; __pyx_lineno = 35; __pyx_clineno = __LINE__; goto __pyx_L1_error;}
-      __Pyx_GOTREF(__pyx_t_6);
-      __pyx_t_5 = PyTuple_New(2); if (unlikely(!__pyx_t_5)) {__pyx_filename = __pyx_f[0]; __pyx_lineno = 35; __pyx_clineno = __LINE__; goto __pyx_L1_error;}
+      __pyx_t_4 = __Pyx_GetName(__pyx_m, __pyx_n_s__iiintersection); if (unlikely(!__pyx_t_4)) {__pyx_filename = __pyx_f[0]; __pyx_lineno = 37; __pyx_clineno = __LINE__; goto __pyx_L1_error;}
+      __Pyx_GOTREF(__pyx_t_4);
+      __pyx_t_5 = PyTuple_New(2); if (unlikely(!__pyx_t_5)) {__pyx_filename = __pyx_f[0]; __pyx_lineno = 37; __pyx_clineno = __LINE__; goto __pyx_L1_error;}
       __Pyx_GOTREF(((PyObject *)__pyx_t_5));
       __Pyx_INCREF(__pyx_v_o1);
       PyTuple_SET_ITEM(__pyx_t_5, 0, __pyx_v_o1);
@@ -808,59 +847,59 @@ static  PyObject *__pyx_f_12experimental_5btree_12intersection_ciiintersection(P
       __Pyx_INCREF(__pyx_v_o2);
       PyTuple_SET_ITEM(__pyx_t_5, 1, __pyx_v_o2);
       __Pyx_GIVEREF(__pyx_v_o2);
-      __pyx_t_4 = PyObject_Call(__pyx_t_6, ((PyObject *)__pyx_t_5), NULL); if (unlikely(!__pyx_t_4)) {__pyx_filename = __pyx_f[0]; __pyx_lineno = 35; __pyx_clineno = __LINE__; goto __pyx_L1_error;}
-      __Pyx_GOTREF(__pyx_t_4);
-      __Pyx_DECREF(__pyx_t_6); __pyx_t_6 = 0;
+      __pyx_t_6 = PyObject_Call(__pyx_t_4, ((PyObject *)__pyx_t_5), NULL); if (unlikely(!__pyx_t_6)) {__pyx_filename = __pyx_f[0]; __pyx_lineno = 37; __pyx_clineno = __LINE__; goto __pyx_L1_error;}
+      __Pyx_GOTREF(__pyx_t_6);
+      __Pyx_DECREF(__pyx_t_4); __pyx_t_4 = 0;
       __Pyx_DECREF(((PyObject *)__pyx_t_5)); __pyx_t_5 = 0;
-      __pyx_r = __pyx_t_4;
-      __pyx_t_4 = 0;
+      __pyx_r = __pyx_t_6;
+      __pyx_t_6 = 0;
       goto __pyx_L0;
     }
-    __pyx_L7:;
+    __pyx_L8:;
 
-    /* "experimental/btree/intersection.pyx":37
+    /* "experimental/btree/intersection.pyx":39
  *             return iiintersection(o1, o2)
  * 
  *         new = IISet()             # <<<<<<<<<<<<<<
  *         ins = new.insert
  *         has = big.has_key
  */
-    __pyx_t_4 = __Pyx_GetName(__pyx_m, __pyx_n_s__IISet); if (unlikely(!__pyx_t_4)) {__pyx_filename = __pyx_f[0]; __pyx_lineno = 37; __pyx_clineno = __LINE__; goto __pyx_L1_error;}
-    __Pyx_GOTREF(__pyx_t_4);
-    __pyx_t_5 = PyObject_Call(__pyx_t_4, ((PyObject *)__pyx_empty_tuple), NULL); if (unlikely(!__pyx_t_5)) {__pyx_filename = __pyx_f[0]; __pyx_lineno = 37; __pyx_clineno = __LINE__; goto __pyx_L1_error;}
+    __pyx_t_6 = __Pyx_GetName(__pyx_m, __pyx_n_s__IISet); if (unlikely(!__pyx_t_6)) {__pyx_filename = __pyx_f[0]; __pyx_lineno = 39; __pyx_clineno = __LINE__; goto __pyx_L1_error;}
+    __Pyx_GOTREF(__pyx_t_6);
+    __pyx_t_5 = PyObject_Call(__pyx_t_6, ((PyObject *)__pyx_empty_tuple), NULL); if (unlikely(!__pyx_t_5)) {__pyx_filename = __pyx_f[0]; __pyx_lineno = 39; __pyx_clineno = __LINE__; goto __pyx_L1_error;}
     __Pyx_GOTREF(__pyx_t_5);
-    __Pyx_DECREF(__pyx_t_4); __pyx_t_4 = 0;
+    __Pyx_DECREF(__pyx_t_6); __pyx_t_6 = 0;
     __Pyx_DECREF(__pyx_v_new);
     __pyx_v_new = __pyx_t_5;
     __pyx_t_5 = 0;
 
-    /* "experimental/btree/intersection.pyx":38
+    /* "experimental/btree/intersection.pyx":40
  * 
  *         new = IISet()
  *         ins = new.insert             # <<<<<<<<<<<<<<
  *         has = big.has_key
  *         for i in small:
  */
-    __pyx_t_5 = PyObject_GetAttr(__pyx_v_new, __pyx_n_s__insert); if (unlikely(!__pyx_t_5)) {__pyx_filename = __pyx_f[0]; __pyx_lineno = 38; __pyx_clineno = __LINE__; goto __pyx_L1_error;}
+    __pyx_t_5 = PyObject_GetAttr(__pyx_v_new, __pyx_n_s__insert); if (unlikely(!__pyx_t_5)) {__pyx_filename = __pyx_f[0]; __pyx_lineno = 40; __pyx_clineno = __LINE__; goto __pyx_L1_error;}
     __Pyx_GOTREF(__pyx_t_5);
     __Pyx_DECREF(__pyx_v_ins);
     __pyx_v_ins = __pyx_t_5;
     __pyx_t_5 = 0;
 
-    /* "experimental/btree/intersection.pyx":39
+    /* "experimental/btree/intersection.pyx":41
  *         new = IISet()
  *         ins = new.insert
  *         has = big.has_key             # <<<<<<<<<<<<<<
  *         for i in small:
  *             if has(i):
  */
-    __pyx_t_5 = PyObject_GetAttr(__pyx_v_big, __pyx_n_s__has_key); if (unlikely(!__pyx_t_5)) {__pyx_filename = __pyx_f[0]; __pyx_lineno = 39; __pyx_clineno = __LINE__; goto __pyx_L1_error;}
+    __pyx_t_5 = PyObject_GetAttr(__pyx_v_big, __pyx_n_s__has_key); if (unlikely(!__pyx_t_5)) {__pyx_filename = __pyx_f[0]; __pyx_lineno = 41; __pyx_clineno = __LINE__; goto __pyx_L1_error;}
     __Pyx_GOTREF(__pyx_t_5);
     __Pyx_DECREF(__pyx_v_has);
     __pyx_v_has = __pyx_t_5;
     __pyx_t_5 = 0;
 
-    /* "experimental/btree/intersection.pyx":40
+    /* "experimental/btree/intersection.pyx":42
  *         ins = new.insert
  *         has = big.has_key
  *         for i in small:             # <<<<<<<<<<<<<<
@@ -870,70 +909,70 @@ static  PyObject *__pyx_f_12experimental_5btree_12intersection_ciiintersection(P
     if (PyList_CheckExact(__pyx_v_small) || PyTuple_CheckExact(__pyx_v_small)) {
       __pyx_t_7 = 0; __pyx_t_5 = __pyx_v_small; __Pyx_INCREF(__pyx_t_5);
     } else {
-      __pyx_t_7 = -1; __pyx_t_5 = PyObject_GetIter(__pyx_v_small); if (unlikely(!__pyx_t_5)) {__pyx_filename = __pyx_f[0]; __pyx_lineno = 40; __pyx_clineno = __LINE__; goto __pyx_L1_error;}
+      __pyx_t_7 = -1; __pyx_t_5 = PyObject_GetIter(__pyx_v_small); if (unlikely(!__pyx_t_5)) {__pyx_filename = __pyx_f[0]; __pyx_lineno = 42; __pyx_clineno = __LINE__; goto __pyx_L1_error;}
       __Pyx_GOTREF(__pyx_t_5);
     }
     for (;;) {
       if (likely(PyList_CheckExact(__pyx_t_5))) {
         if (__pyx_t_7 >= PyList_GET_SIZE(__pyx_t_5)) break;
-        __pyx_t_4 = PyList_GET_ITEM(__pyx_t_5, __pyx_t_7); __Pyx_INCREF(__pyx_t_4); __pyx_t_7++;
+        __pyx_t_6 = PyList_GET_ITEM(__pyx_t_5, __pyx_t_7); __Pyx_INCREF(__pyx_t_6); __pyx_t_7++;
       } else if (likely(PyTuple_CheckExact(__pyx_t_5))) {
         if (__pyx_t_7 >= PyTuple_GET_SIZE(__pyx_t_5)) break;
-        __pyx_t_4 = PyTuple_GET_ITEM(__pyx_t_5, __pyx_t_7); __Pyx_INCREF(__pyx_t_4); __pyx_t_7++;
+        __pyx_t_6 = PyTuple_GET_ITEM(__pyx_t_5, __pyx_t_7); __Pyx_INCREF(__pyx_t_6); __pyx_t_7++;
       } else {
-        __pyx_t_4 = PyIter_Next(__pyx_t_5);
-        if (!__pyx_t_4) {
-          if (unlikely(PyErr_Occurred())) {__pyx_filename = __pyx_f[0]; __pyx_lineno = 40; __pyx_clineno = __LINE__; goto __pyx_L1_error;}
+        __pyx_t_6 = PyIter_Next(__pyx_t_5);
+        if (!__pyx_t_6) {
+          if (unlikely(PyErr_Occurred())) {__pyx_filename = __pyx_f[0]; __pyx_lineno = 42; __pyx_clineno = __LINE__; goto __pyx_L1_error;}
           break;
         }
-        __Pyx_GOTREF(__pyx_t_4);
+        __Pyx_GOTREF(__pyx_t_6);
       }
       __Pyx_DECREF(__pyx_v_i);
-      __pyx_v_i = __pyx_t_4;
-      __pyx_t_4 = 0;
+      __pyx_v_i = __pyx_t_6;
+      __pyx_t_6 = 0;
 
-      /* "experimental/btree/intersection.pyx":41
+      /* "experimental/btree/intersection.pyx":43
  *         has = big.has_key
  *         for i in small:
  *             if has(i):             # <<<<<<<<<<<<<<
  *                 ins(i)
  *         return new
  */
-      __pyx_t_4 = PyTuple_New(1); if (unlikely(!__pyx_t_4)) {__pyx_filename = __pyx_f[0]; __pyx_lineno = 41; __pyx_clineno = __LINE__; goto __pyx_L1_error;}
-      __Pyx_GOTREF(((PyObject *)__pyx_t_4));
+      __pyx_t_6 = PyTuple_New(1); if (unlikely(!__pyx_t_6)) {__pyx_filename = __pyx_f[0]; __pyx_lineno = 43; __pyx_clineno = __LINE__; goto __pyx_L1_error;}
+      __Pyx_GOTREF(((PyObject *)__pyx_t_6));
       __Pyx_INCREF(__pyx_v_i);
-      PyTuple_SET_ITEM(__pyx_t_4, 0, __pyx_v_i);
+      PyTuple_SET_ITEM(__pyx_t_6, 0, __pyx_v_i);
       __Pyx_GIVEREF(__pyx_v_i);
-      __pyx_t_6 = PyObject_Call(__pyx_v_has, ((PyObject *)__pyx_t_4), NULL); if (unlikely(!__pyx_t_6)) {__pyx_filename = __pyx_f[0]; __pyx_lineno = 41; __pyx_clineno = __LINE__; goto __pyx_L1_error;}
-      __Pyx_GOTREF(__pyx_t_6);
-      __Pyx_DECREF(((PyObject *)__pyx_t_4)); __pyx_t_4 = 0;
-      __pyx_t_1 = __Pyx_PyObject_IsTrue(__pyx_t_6); if (unlikely(__pyx_t_1 < 0)) {__pyx_filename = __pyx_f[0]; __pyx_lineno = 41; __pyx_clineno = __LINE__; goto __pyx_L1_error;}
-      __Pyx_DECREF(__pyx_t_6); __pyx_t_6 = 0;
-      if (__pyx_t_1) {
+      __pyx_t_4 = PyObject_Call(__pyx_v_has, ((PyObject *)__pyx_t_6), NULL); if (unlikely(!__pyx_t_4)) {__pyx_filename = __pyx_f[0]; __pyx_lineno = 43; __pyx_clineno = __LINE__; goto __pyx_L1_error;}
+      __Pyx_GOTREF(__pyx_t_4);
+      __Pyx_DECREF(((PyObject *)__pyx_t_6)); __pyx_t_6 = 0;
+      __pyx_t_3 = __Pyx_PyObject_IsTrue(__pyx_t_4); if (unlikely(__pyx_t_3 < 0)) {__pyx_filename = __pyx_f[0]; __pyx_lineno = 43; __pyx_clineno = __LINE__; goto __pyx_L1_error;}
+      __Pyx_DECREF(__pyx_t_4); __pyx_t_4 = 0;
+      if (__pyx_t_3) {
 
-        /* "experimental/btree/intersection.pyx":42
+        /* "experimental/btree/intersection.pyx":44
  *         for i in small:
  *             if has(i):
  *                 ins(i)             # <<<<<<<<<<<<<<
  *         return new
  *     return iiintersection(o1, o2)
  */
-        __pyx_t_6 = PyTuple_New(1); if (unlikely(!__pyx_t_6)) {__pyx_filename = __pyx_f[0]; __pyx_lineno = 42; __pyx_clineno = __LINE__; goto __pyx_L1_error;}
-        __Pyx_GOTREF(((PyObject *)__pyx_t_6));
+        __pyx_t_4 = PyTuple_New(1); if (unlikely(!__pyx_t_4)) {__pyx_filename = __pyx_f[0]; __pyx_lineno = 44; __pyx_clineno = __LINE__; goto __pyx_L1_error;}
+        __Pyx_GOTREF(((PyObject *)__pyx_t_4));
         __Pyx_INCREF(__pyx_v_i);
-        PyTuple_SET_ITEM(__pyx_t_6, 0, __pyx_v_i);
+        PyTuple_SET_ITEM(__pyx_t_4, 0, __pyx_v_i);
         __Pyx_GIVEREF(__pyx_v_i);
-        __pyx_t_4 = PyObject_Call(__pyx_v_ins, ((PyObject *)__pyx_t_6), NULL); if (unlikely(!__pyx_t_4)) {__pyx_filename = __pyx_f[0]; __pyx_lineno = 42; __pyx_clineno = __LINE__; goto __pyx_L1_error;}
-        __Pyx_GOTREF(__pyx_t_4);
-        __Pyx_DECREF(((PyObject *)__pyx_t_6)); __pyx_t_6 = 0;
-        __Pyx_DECREF(__pyx_t_4); __pyx_t_4 = 0;
-        goto __pyx_L10;
+        __pyx_t_6 = PyObject_Call(__pyx_v_ins, ((PyObject *)__pyx_t_4), NULL); if (unlikely(!__pyx_t_6)) {__pyx_filename = __pyx_f[0]; __pyx_lineno = 44; __pyx_clineno = __LINE__; goto __pyx_L1_error;}
+        __Pyx_GOTREF(__pyx_t_6);
+        __Pyx_DECREF(((PyObject *)__pyx_t_4)); __pyx_t_4 = 0;
+        __Pyx_DECREF(__pyx_t_6); __pyx_t_6 = 0;
+        goto __pyx_L11;
       }
-      __pyx_L10:;
+      __pyx_L11:;
     }
     __Pyx_DECREF(__pyx_t_5); __pyx_t_5 = 0;
 
-    /* "experimental/btree/intersection.pyx":43
+    /* "experimental/btree/intersection.pyx":45
  *             if has(i):
  *                 ins(i)
  *         return new             # <<<<<<<<<<<<<<
@@ -943,32 +982,32 @@ static  PyObject *__pyx_f_12experimental_5btree_12intersection_ciiintersection(P
     __Pyx_INCREF(__pyx_v_new);
     __pyx_r = __pyx_v_new;
     goto __pyx_L0;
-    goto __pyx_L6;
+    goto __pyx_L7;
   }
-  __pyx_L6:;
+  __pyx_L7:;
 
-  /* "experimental/btree/intersection.pyx":44
+  /* "experimental/btree/intersection.pyx":46
  *                 ins(i)
  *         return new
  *     return iiintersection(o1, o2)             # <<<<<<<<<<<<<<
  */
   __Pyx_XDECREF(__pyx_r);
-  __pyx_t_5 = __Pyx_GetName(__pyx_m, __pyx_n_s__iiintersection); if (unlikely(!__pyx_t_5)) {__pyx_filename = __pyx_f[0]; __pyx_lineno = 44; __pyx_clineno = __LINE__; goto __pyx_L1_error;}
+  __pyx_t_5 = __Pyx_GetName(__pyx_m, __pyx_n_s__iiintersection); if (unlikely(!__pyx_t_5)) {__pyx_filename = __pyx_f[0]; __pyx_lineno = 46; __pyx_clineno = __LINE__; goto __pyx_L1_error;}
   __Pyx_GOTREF(__pyx_t_5);
-  __pyx_t_4 = PyTuple_New(2); if (unlikely(!__pyx_t_4)) {__pyx_filename = __pyx_f[0]; __pyx_lineno = 44; __pyx_clineno = __LINE__; goto __pyx_L1_error;}
-  __Pyx_GOTREF(((PyObject *)__pyx_t_4));
+  __pyx_t_6 = PyTuple_New(2); if (unlikely(!__pyx_t_6)) {__pyx_filename = __pyx_f[0]; __pyx_lineno = 46; __pyx_clineno = __LINE__; goto __pyx_L1_error;}
+  __Pyx_GOTREF(((PyObject *)__pyx_t_6));
   __Pyx_INCREF(__pyx_v_o1);
-  PyTuple_SET_ITEM(__pyx_t_4, 0, __pyx_v_o1);
+  PyTuple_SET_ITEM(__pyx_t_6, 0, __pyx_v_o1);
   __Pyx_GIVEREF(__pyx_v_o1);
   __Pyx_INCREF(__pyx_v_o2);
-  PyTuple_SET_ITEM(__pyx_t_4, 1, __pyx_v_o2);
+  PyTuple_SET_ITEM(__pyx_t_6, 1, __pyx_v_o2);
   __Pyx_GIVEREF(__pyx_v_o2);
-  __pyx_t_6 = PyObject_Call(__pyx_t_5, ((PyObject *)__pyx_t_4), NULL); if (unlikely(!__pyx_t_6)) {__pyx_filename = __pyx_f[0]; __pyx_lineno = 44; __pyx_clineno = __LINE__; goto __pyx_L1_error;}
-  __Pyx_GOTREF(__pyx_t_6);
+  __pyx_t_4 = PyObject_Call(__pyx_t_5, ((PyObject *)__pyx_t_6), NULL); if (unlikely(!__pyx_t_4)) {__pyx_filename = __pyx_f[0]; __pyx_lineno = 46; __pyx_clineno = __LINE__; goto __pyx_L1_error;}
+  __Pyx_GOTREF(__pyx_t_4);
   __Pyx_DECREF(__pyx_t_5); __pyx_t_5 = 0;
-  __Pyx_DECREF(((PyObject *)__pyx_t_4)); __pyx_t_4 = 0;
-  __pyx_r = __pyx_t_6;
-  __pyx_t_6 = 0;
+  __Pyx_DECREF(((PyObject *)__pyx_t_6)); __pyx_t_6 = 0;
+  __pyx_r = __pyx_t_4;
+  __pyx_t_4 = 0;
   goto __pyx_L0;
 
   __pyx_r = Py_None; __Pyx_INCREF(Py_None);
